--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "node-server",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "./index.js",
     "scripts": {
         "test": "istanbul cover _mocha test/test.js"
     },
@@ -13,9 +13,8 @@
         "express": "^4.14.0",
         "express-mysql-session": "^1.2.0",
         "express-session": "^1.14.2",
-        "mysql": "^2.12.0"
+        "mysql": "^2.12.0",
+        "nodemon": "^1.12.1"
     },
-    "devDependencies": {
-        
-    }
+    "devDependencies": {}
 }
